--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,7 @@
   font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
+/* Таблица стилей для header */
 .header {
   height: 100vh;
   min-height: 600px;
@@ -75,6 +76,52 @@ z-index: 0;
   right: 0;
   top: 64px;
   z-index: -1;
+}
+
+/* Таблица стилей для description */
+
+.description__two-columns {
+  margin: 100px auto;
+}
+
+.two-columns {
+  display: flex;
+  width: 80%;
+  justify-content: space-between;
+  min-height: 332px;
+}
+
+.two-columns__brief {
+  width: 175px;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  color: #2f80ed;
+}
+
+.two-columns__main-text {
+  width: 80%;
+  min-width: 784px;
+  display: flex;
+  flex-direction: column;
+}
+
+.two-columns__paragraph {
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  margin: 0 0 30px;
+}
+
+.two-columns__paragraph:last-of-type {
+  margin: 0;
+}
+
+.two-columns__span-accent {
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: bold;
+  margin: 0;
 }
 
 /* и элемента с модификатором вида ключ-значение */
