--- a/styles/style.css
+++ b/styles/style.css
@@ -18,14 +18,19 @@
   position: relative;
   display: flex;
   flex-wrap: wrap;
-  align-content: center;
+  align-items: center;
   z-index: -2;
+  color: #000;
   /* выше установили ограничения для секции */
 }
 
-.header__logo_place_header{
-  background-image: url(../images/logo_place_header.svg);
+.logo {
   width: 183px;
+  background-image: url(../images/logo_place_header.svg);
+  background-size: cover;
+}
+
+.logo_place_header{
   height: 32px;
   position: absolute;
   top: 30px;
@@ -35,7 +40,8 @@
 
 .header__title {
   width: 730px;
-  margin-left: 64px;
+  margin: 0;
+  padding-left: 64px;
   font-size: 102px;
   font-weight: bold;
   line-height: 96px;
@@ -51,6 +57,7 @@
   font-size: 18px;
   font-weight: normal;
   z-index: 1;
+  margin: 0;
 }
 
 .header__link {
@@ -80,8 +87,11 @@ z-index: 0;
 
 /* Таблица стилей для description */
 
-.description__two-columns {
-  margin: 100px auto;
+.description {
+  display: flex;
+  justify-content: center;
+  padding: 100px 0 0;
+  box-sizing: border-box;
 }
 
 .two-columns {
@@ -89,6 +99,7 @@ z-index: 0;
   width: 80%;
   justify-content: space-between;
   min-height: 332px;
+  color: #000;
 }
 
 .two-columns__brief {
@@ -124,10 +135,223 @@ z-index: 0;
   margin: 0;
 }
 
+/* Таблица стилей для digits */
+
+.digits {
+  color: #000;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 100px 0;
+  box-sizing: border-box;
+}
+
+.section-title {
+
+  margin: 0 0 20px;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: bold;
+  text-align: center;
+  width: 60%;
+}
+
+.section-subtitle {
+  margin: 0;
+  text-align: center;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  width: 60%;
+}
+
+.table {
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 1100px;
+  margin: 0 auto;
+  padding: 0;
+}
+
+.table__cell {
+  width: 250px;
+  margin-top: 60px;
+}
 /* и элемента с модификатором вида ключ-значение */
+
+
+.table__heading {
+  margin: 0;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.table__text {
+  margin: 0;
+  padding: 20px 0 0;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+/* Таблица стилей для feynman */
+
+.feynman {
+background-color: #f2f2f2;
+background-image: url(../images/feynman.png);
+background-position: left bottom;
+background-repeat: no-repeat;
+height: 890px;
+display: flex;
+flex-direction: column;
+align-items: center;
+color: #000;
+position: relative;
+}
+
+.feynman__title {
+  width: 648px;
+  margin: 100px 0 0;
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: bold;
+  text-align: center;
+}
+
+.feynman__subtitle {
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  margin: 70px 0 0;
+  text-align: center;
+}
+
+.feynman__link {
+color: #2f80ed;
+text-decoration: none;
+margin: 0;
+line-height: 51px;
+font-size: 36px;
+font-weight: normal;
+position: absolute;
+top: 50%;
+right: 48px;
+}
+
+/* Таблица стилей для kaufman */
+
+.kaufman {
+  background-color: #1f1f1f;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  overflow: hidden;
+  z-index: -2;
+  padding-top: 90px;
+  box-sizing: border-box;
+}
+
+.table_theme_dark {
+  padding-bottom: 90px;
+}
+
 .table__cell_theme_dark {
   width: 200px;
-  color: white;
   margin-right: 0;
   margin-top: 80px;
+}
+
+.kaufman__triangle {
+  width: 877px;
+  height: 877px;
+  position: absolute;
+  right: -210px;
+  top: 0;
+  z-index: -1;
+}
+
+/* Таблица стилей для footer */
+
+.footer {
+  background-color: #1f1f1f;
+  min-height: 350px;
+  color: white;
+  display: flex;
+  justify-content: center;
+  padding: 60px 0 40px;
+  box-sizing: border-box;
+}
+
+.footer__columns {
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer__column {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer__column_content_copyright {
+justify-content: space-between;
+flex-basis: 711px;
+}
+
+.logo_place_footer {
+  height: 35px;
+  background-image: url(../images/logo_place_footer.svg);
+}
+
+.footer__author {
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+  margin: 18px 0;
+}
+
+.footer__column-heading {
+line-height: 30px;
+font-size: 18px;
+font-weight: bold;
+margin: 0 0 20px;
+}
+
+.footer__column-link {
+  list-style: none;
+  padding: 0;
+  color: white;
+  text-decoration: none;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+  margin: 0;
+}
+
+.footer__column-link:last-of-type {
+  margin: 0 0 16px;
+}
+
+.footer__column-links {
+  list-style: none;
+  padding: 0;
+  color: white;
+  text-decoration: none;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+  margin: 0;
+}
+.footer__column-links:last-of-type {
+  margin: 0 0 16px;
+}
+.footer__social-icon {
+  width: 16px;
+  height: 16px;
+  margin: 0 10px 0 0;
 }
