--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,13 @@
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
@@ -20,6 +30,7 @@
   flex-wrap: wrap;
   align-items: center;
   color: #000;
+  overflow: hidden;
   /* выше установили ограничения для секции */
 }
 
@@ -29,7 +40,7 @@
   background-size: cover;
 }
 
-.logo_place_header{
+.logo_place_header {
   height: 32px;
   position: absolute;
   top: 30px;
@@ -63,15 +74,21 @@
   text-decoration: none;
   color: #2f80ed;
   z-index: 5;
+  opacity: 1;
+  transition: opacity .5s linear;
+}
+
+.header__link:hover {
+  opacity: .7;
 }
 
 .header__main-illustration {
-width: 765px;
-height: 608px;
-position: absolute;
-right: 0;
-bottom: 0;
-z-index: 2;
+  width: 765px;
+  height: 608px;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  z-index: 2;
 }
 
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
@@ -83,6 +100,100 @@ z-index: 2;
   right: 0;
   top: 64px;
   z-index: 1;
+}
+
+.rotation {
+  animation: rotation linear 20s infinite;
+}
+
+.techniques {
+  color: #000;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 100px 0 0;
+  box-sizing: border-box;
+}
+
+.cards {
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 920px;
+  margin: 0 auto;
+  padding: 0;
+}
+
+.cards__item {
+  width: 240px;
+  margin-top: 60px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.cards__image {
+  width: 160px;
+  height: 160px;
+  border-radius: 50%;
+  padding: 0;
+}
+
+.cards__title {
+  margin: 43px 0 16px;
+  padding: 0;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: bold;
+  text-align: center;
+}
+
+.cards__description {
+  line-height: 23px;
+  font-size: 18px;
+  font-weight: normal;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+}
+
+.video {
+  color: #000;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 100px 0 0;
+  box-sizing: border-box;
+  max-height: 520px;
+}
+
+.video__iframes {
+  display: flex;
+  font-size: 0;
+  margin: 50px 0 0;
+  padding: 0;
+  z-index: 1;
+}
+
+.video__iframe {
+  width: 515px;
+  height: 316px;
+  margin: 0;
+  padding: 0;
+  border: 0;
+}
+
+.video__iframe:first-of-type {
+  margin-right: 20px;
+}
+
+.oakley {
+  display: flex;
+  justify-content: center;
+  padding: 160px 0 0;
+  box-sizing: border-box;
+  background-color: #f2f2f2;
 }
 
 /* Таблица стилей для description */
@@ -98,7 +209,6 @@ z-index: 2;
   display: flex;
   width: 80%;
   justify-content: space-between;
-  min-height: 332px;
   color: #000;
 }
 
@@ -179,6 +289,7 @@ z-index: 2;
   width: 250px;
   margin-top: 60px;
 }
+
 /* и элемента с модификатором вида ключ-значение */
 
 
@@ -200,16 +311,16 @@ z-index: 2;
 /* Таблица стилей для feynman */
 
 .feynman {
-background-color: #f2f2f2;
-background-image: url(../images/feynman.png);
-background-position: left bottom;
-background-repeat: no-repeat;
-height: 890px;
-display: flex;
-flex-direction: column;
-align-items: center;
-color: #000;
-position: relative;
+  background-color: #f2f2f2;
+  background-image: url(../images/feynman.png);
+  background-position: left bottom;
+  background-repeat: no-repeat;
+  height: 890px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: #000;
+  position: relative;
 }
 
 .feynman__title {
@@ -230,15 +341,113 @@ position: relative;
 }
 
 .feynman__link {
-color: #2f80ed;
-text-decoration: none;
-margin: 0;
-line-height: 51px;
-font-size: 36px;
-font-weight: normal;
-position: absolute;
-top: 50%;
-right: 48px;
+  color: #2f80ed;
+  text-decoration: none;
+  margin: 0;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  position: absolute;
+  top: 50%;
+  right: 48px;
+  opacity: 1;
+  transition: opacity .5s linear;
+}
+
+.feynman__link:hover {
+  opacity: .7;
+}
+
+.khan {
+  color: #000;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 105px 0 0;
+  box-sizing: border-box;
+  background-color: #f2f2f2;
+}
+
+.khan__container {
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+}
+
+.khan__author {
+  margin: 0;
+  padding: 0;
+  text-align: left;
+  line-height: 42px;
+  font-size: 30px;
+  font-weight: normal;
+}
+
+.khan__title {
+  margin: 0;
+  padding: 0;
+  text-align: left;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: bold;
+}
+
+.khan__quote {
+  width: 790px;
+  margin: 50px 0 0;
+  padding: 0;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+
+.khan__quote-author {
+  margin: 36px 0 0;
+  padding: 0;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: bold;
+  font-style: normal;
+}
+
+.khan__quote-author-subline {
+  margin: 10px 0 0;
+  padding: 0;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: normal;
+  font-style: normal;
+}
+
+.khan__book-container {
+  margin: 68px 0 0;
+  padding: 0;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
+.khan__book-pic {
+  width: 620px;
+  height: 608px;
+  margin: 0 48px 0 0;
+  object-fit: cover;
+  object-position: left top;
+}
+
+.khan__buy-link {
+  margin: 0;
+  padding: 0;
+  color: #2f80ed;
+  line-height: 42px;
+  font-size: 30px;
+  font-weight: normal;
+  opacity: 1;
+  transition: opacity .5s linear;
+}
+
+.khan__buy-link:hover {
+  opacity: .7;
 }
 
 /* Таблица стилей для kaufman */
@@ -275,6 +484,40 @@ right: 48px;
   z-index: -1;
 }
 
+.resources {
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  padding: 100px 0 217px;
+  align-items: center;
+}
+
+.resources__logo-zone {
+  display: flex;
+  margin: 80px 0 0;
+  padding: 0;
+  font-size: 0;
+  justify-content: space-between;
+  width: 1100px;
+}
+
+.resources__link {
+  transition: opacity .5s linear;
+  opacity: 1;
+}
+
+.resources__link:hover {
+  opacity: .7;
+}
+
+.resources__logo {
+  width: 270px;
+  height: 38px;
+  object-fit: contain;
+  object-position: center;
+  opacity: .4;
+}
+
 /* Таблица стилей для footer */
 
 .footer {
@@ -299,8 +542,8 @@ right: 48px;
 }
 
 .footer__column_content_copyright {
-justify-content: space-between;
-flex-basis: 711px;
+  justify-content: space-between;
+  flex-basis: 711px;
 }
 
 .logo_place_footer {
@@ -316,10 +559,10 @@ flex-basis: 711px;
 }
 
 .footer__column-heading {
-line-height: 30px;
-font-size: 18px;
-font-weight: bold;
-margin: 0 0 20px;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: bold;
+  margin: 0 0 20px;
 }
 
 .footer__column-links {
@@ -336,10 +579,18 @@ margin: 0 0 20px;
   font-size: 18px;
   font-weight: normal;
   margin: 0;
+  opacity: 1;
+  transition: opacity .5s linear;
 }
+
+.footer__column-link:hover {
+  opacity: .7;
+}
+
 .footer__column-link:last-of-type {
   margin: 0 0 16px;
 }
+
 .footer__social-icon {
   width: 16px;
   height: 16px;
