--- a/blocks/cards/__item/cards__item.css
+++ b/blocks/cards/__item/cards__item.css
@@ -4,6 +4,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  list-style-type: none;
+  padding: 0;
 }
 
 .cards__item:nth-of-type(3n) {
