--- a/blocks/kaufman/__triangle/kaufman__triangle.css
+++ b/blocks/kaufman/__triangle/kaufman__triangle.css
@@ -4,5 +4,8 @@
   position: absolute;
   right: -210px;
   top: 0;
-  z-index: -1;
+  z-index: 2;
+  background-image: url(../../../images/kaufman-triangle.svg);
+  background-position: center;
+  background-size: cover;
 }
