--- a/blocks/resources/__link/resources__link.css
+++ b/blocks/resources/__link/resources__link.css
@@ -1,6 +1,9 @@
 .resources__link {
   transition: opacity .5s linear;
   opacity: 1;
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
 }
 
 .resources__link:hover {
